Feat: Updated Card, Deck, Game, GameController, GameRepo and GameService for getGameById() method.